--- a/EqUiWebUi/Views/Shared/_Layout.cshtml
+++ b/EqUiWebUi/Views/Shared/_Layout.cshtml
@@ -62,11 +62,11 @@
 
                     <a href="#"><span style="padding-left:20px" class=""></span></a>
 
-                    <a class="fas fa-cog fa-2x text-danger clickable" href='@Url.Action("Settings", "Home", new { area = "" }, null)' data-toggle="tooltip" title="admin area"></a>
+                    <a class="fas fa-cog fa-2x text-white-50 clickable" href='@Url.Action("Settings", "Home", new { area = "" }, null)' data-toggle="tooltip" title="admin area"></a>
 
                     <a href="#"><span style="padding-left:20px" class=""></span></a>
 
-                    <a class="fas fa-arrows-alt text-white clickable" id="fullscreenNav" data-toggle="tooltip" data-placement="left" title="Go fullscreen"></a>
+                    <a class="fas fa-arrows-alt fa-2x text-white-50 clickable" id="fullscreenNav" data-toggle="tooltip" data-placement="left" title="Go fullscreen"></a>
 
                 </div>
             </div>
