--- a/EqUiWebUi/Areas/VASC/Views/c_service_setup/_sessionSetup.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_service_setup/_sessionSetup.cshtml
@@ -1,12 +1,11 @@
 ﻿<div class="card">
     <div class="card-header">
-        <h5 class="card-title text">Session settings</h5>
-        <div class="text-muted">
-            @Html.ActionLink("Create New parameter", "Create")
-        </div>
-        <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
-    </div>
-    <div class="alert-info">
+        <h5 class="card-title text">
+            <a class="clickable far fa-window-restore text-black-50" href="#" data-toggle="tooltip" title="Direct link to this view"></a>
+            Service settings
+            @MyHtmlHelpers.IconActionLink(Url.Action("Create"), "fas fa-pencil-alt", "Create", "Create new parameter", OpenNewWindow: true)
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+        </h5>
     </div>
     <div class="card-body">
         <div id="sessionSetupGridContainer" class="mvc-grid"></div>
@@ -16,10 +15,13 @@
 
 <script>
     $('#sessionSetupGridContainer').mvcgrid({
-        sourceUrl: '@Html.Raw(@Url.Action("_sessionSetupGrid",new { enable_mask = ViewBag.enable_mask }))',
+        sourceUrl: '@Url.Action("_sessionSetupGrid",new { enable_mask = ViewBag.enable_mask })',
         requestType: 'get', // Ajax grid request type
         reloadFailed: function (result) {
             $("#sessionSetupGridContainer").html($("#Error", result.responseText).html());
+        },        
+        reloadEnded: function () {
+           EnableInterfaceEvents();
         }
     });
 </script>
