--- a/EqUiWebUi/Areas/VASC/Views/c_variable_search/GetVariableData.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_variable_search/GetVariableData.cshtml
@@ -5,7 +5,6 @@
 }
 
 <h2>GetSearchVariableData</h2>
-<div class="badge">Count: @Model.Count()</div>
 <div class="badge">SourceTable: @ViewBag.SourceTable</div>
 
 @Html.Grid(Model).Named("rt_search_valueGrid").Build(columns =>
@@ -21,7 +20,9 @@
     columns.Add(c => c.value).Titled("value");
 }).Filterable().Sortable().Pageable(pager =>
 {
-    pager.RowsPerPage = 30;
+    pager.RowsPerPage = 20;
+    pager.PageSizes = new Dictionary<Int32, String> { { 0, "All" }, { 10, "10" }, { 20, "20" }, { 40, "40" }, { 80, "80" }, { 100, "100" } };
+    pager.ShowPageSizes = true;
 }).Empty("Did not find anything").Css("table-hover")
 
 @section scripts{
